crates/plotnik-lib/tests/02-parser/recovery_validation/negated_field_with_upper_ident.txt
(call -Arguments)
------------------ DIAGNOSTICS -------------------
error: field names must be snake_case
 --> query.ptk:1:8
  |
1 | (call -Arguments)
  |        ^^^^^^^^^
  |
help: use `arguments`
  |
1 - (call -Arguments)
1 + (call -arguments)
  |
help: fields come from the grammar and are snake_case
